test/spec/call_indirect.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/call_indirect.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:231:22: found call_indirect operator, but no table
    (func $no-table (call_indirect 0 (i32.const 0)))
                     ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:240:30: type stack size too small at i32.eqz. got 0, expected at least 1
    (func $type-void-vs-num (i32.eqz (call_indirect 0 (i32.const 0))))
                             ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:240:5: type stack at end of function is 1. expected 0
    (func $type-void-vs-num (i32.eqz (call_indirect 0 (i32.const 0))))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:248:29: type mismatch at i32.eqz. got i64, expected i32
    (func $type-num-vs-num (i32.eqz (call_indirect 0 (i32.const 0))))
                            ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:248:5: type stack at end of function is 1. expected 0
    (func $type-num-vs-num (i32.eqz (call_indirect 0 (i32.const 0))))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:257:26: type stack size too small at call_indirect. got 0, expected at least 1
    (func $arity-0-vs-1 (call_indirect 0 (i32.const 0)))
                         ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:265:26: type stack size too small at call_indirect. got 0, expected at least 2
    (func $arity-0-vs-2 (call_indirect 0 (i32.const 0)))
                         ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:273:5: type stack at end of function is 1. expected 0
    (func $arity-1-vs-0 (call_indirect 0 (i32.const 1) (i32.const 0)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:281:5: type stack at end of function is 2. expected 0
    (func $arity-2-vs-0
    ^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:292:35: type stack size too small at call_indirect. got 0, expected at least 1
    (func $type-func-void-vs-i32 (call_indirect 0 (i32.const 1) (nop)))
                                  ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:300:34: type mismatch at call_indirect function index. got i64, expected i32
    (func $type-func-num-vs-i32 (call_indirect 0 (i32.const 0) (i64.const 1)))
                                 ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:310:8: type stack size too small at call_indirect. got 1, expected at least 2
      (call_indirect 0 (nop) (i32.const 1) (i32.const 0))
       ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:320:8: type stack size too small at call_indirect. got 1, expected at least 2
      (call_indirect 0 (i32.const 1) (nop) (i32.const 0))
       ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:330:8: type mismatch for argument 0 of call_indirect. got f64, expected i32
      (call_indirect 0 (f64.const 1) (i32.const 1) (i32.const 0))
       ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:330:8: type mismatch for argument 1 of call_indirect. got i32, expected f64
      (call_indirect 0 (f64.const 1) (i32.const 1) (i32.const 0))
       ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:340:8: type mismatch for argument 0 of call_indirect. got i32, expected f64
      (call_indirect 0 (i32.const 1) (f64.const 1) (i32.const 0))
       ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:340:8: type mismatch for argument 1 of call_indirect. got f64, expected i32
      (call_indirect 0 (i32.const 1) (f64.const 1) (i32.const 0))
       ^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:352:40: function type variable out of range (max 1)
    (func $unbound-type (call_indirect 1 (i32.const 0)))
                                       ^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:352:5: type stack at end of function is 1. expected 0
    (func $unbound-type (call_indirect 1 (i32.const 0)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:359:38: function type variable out of range (max 1)
    (func $large-type (call_indirect 1012321300 (i32.const 0)))
                                     ^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:359:5: type stack at end of function is 1. expected 0
    (func $large-type (call_indirect 1012321300 (i32.const 0)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:368:32: function variable out of range (max 0)
  (module (table anyfunc (elem 0 0)))
                               ^
assert_invalid error:
  out/third_party/testsuite/call_indirect.wast:368:34: function variable out of range (max 0)
  (module (table anyfunc (elem 0 0)))
                                 ^
out/third_party/testsuite/call_indirect.wast:229: assert_invalid passed:
  error: found call_indirect operator, but no table
  error: @0x0000001c: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:237: assert_invalid passed:
  error: type stack size too small at i32.eqz. got 0, expected at least 1
  error: @0x00000023: on_convert_expr callback failed
out/third_party/testsuite/call_indirect.wast:245: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got i64.
  error: @0x00000027: on_convert_expr callback failed
out/third_party/testsuite/call_indirect.wast:254: assert_invalid passed:
  error: type stack size too small at call_indirect. got 0, expected at least 1
  error: @0x00000026: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:262: assert_invalid passed:
  error: type stack size too small at call_indirect. got 0, expected at least 2
  error: @0x00000027: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:270: assert_invalid passed:
  error: type stack at end of func is 1. expected 0
  error: @0x00000025: end_function_body callback failed
out/third_party/testsuite/call_indirect.wast:278: assert_invalid passed:
  error: type stack at end of func is 2. expected 0
  error: @0x0000002e: end_function_body callback failed
out/third_party/testsuite/call_indirect.wast:289: assert_invalid passed:
  error: type stack size too small at call_indirect. got 0, expected at least 1
  error: @0x00000027: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:297: assert_invalid passed:
  error: type mismatch in call_indirect, expected i32 but got i64.
  error: @0x00000028: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:306: assert_invalid passed:
  error: type stack size too small at call_indirect. got 1, expected at least 2
  error: @0x0000002a: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:316: assert_invalid passed:
  error: type stack size too small at call_indirect. got 1, expected at least 2
  error: @0x0000002a: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:326: assert_invalid passed:
  error: type mismatch in call_indirect, expected f64 but got i32.
  error: @0x00000032: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:336: assert_invalid passed:
  error: type mismatch in call_indirect, expected i32 but got f64.
  error: @0x00000032: on_call_indirect_expr callback failed
out/third_party/testsuite/call_indirect.wast:350: assert_invalid passed:
  error: @0x00000021: invalid call_indirect signature index
out/third_party/testsuite/call_indirect.wast:357: assert_invalid passed:
  error: @0x00000025: invalid call_indirect signature index
out/third_party/testsuite/call_indirect.wast:368: assert_invalid passed:
  error: invalid func_index: 0 (max 0)
  error: @0x00000018: on_elem_segment_function_index callback failed
out/third_party/testsuite/call_indirect.wast:376: assert_unlinkable passed:
  error: elem segment offset is out of bounds: 10 >= max value 10
  error: @0x00000021: on_elem_segment_function_index callback failed
out/third_party/testsuite/call_indirect.wast:385: assert_unlinkable passed:
  error: elem segment offset is out of bounds: 4294967295 >= max value 10
  error: @0x00000021: on_elem_segment_function_index callback failed
out/third_party/testsuite/call_indirect.wast:394: assert_unlinkable passed:
  error: elem segment offset is out of bounds: 4294967286 >= max value 10
  error: @0x00000021: on_elem_segment_function_index callback failed
67/67 tests passed.
;;; STDOUT ;;)
